updated mini project

--- a/src/SignInModule/i18n/strings.json
+++ b/src/SignInModule/i18n/strings.json
@@ -1,7 +1,7 @@
 {
     "signInPageStrings":
     {
-        "welcomeMessage":"Sign up",
+        "welcomeMessage":"Sign In",
         "userName":"USERNAME",
         "password":"PASSWORD",
         "noAccount":"Don’t have an account?",
