--- a/src/common/i18n/strings.json
+++ b/src/common/i18n/strings.json
@@ -12,7 +12,5 @@
 
         },
          "noObservations":"Look like there is no Observations here",
-         "back":"back",
-         "headings":"['TITLE','REPORTED ON','ASSIGNED TO','SEVERITY','STATUS','DUE DATE','MESSAGES']"
-                         
+         "back":"back"                         
 }
